# Patterno

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/Patterno/: command.hpp  singleton.hpp
test/: CMakeLists.txt  main.cpp
test/src/base_unit_tests/: command.cc  singleton.cc
